Injecct Logger in SocketDescriptor for debug
* And take ARG: configuration in Dockerfile for debug build

--- a/docker-compose.regtest.yml
+++ b/docker-compose.regtest.yml
@@ -119,6 +119,8 @@ services:
     build:
       context: .
       dockerfile: src/NRustLightning.Server/Dockerfile
+      args:
+        CONFIGURATION: "Debug"
     ports:
       - "9735:9735"
       - "5001:5001"
