--- a/tests/NRustLightning.Server.Tests/NRustLightning.Server.Tests.csproj
+++ b/tests/NRustLightning.Server.Tests/NRustLightning.Server.Tests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFac" Version="5.1.4" />
+    <PackageReference Include="BTCPayServer.Lightning.All" Version="1.1.13" />
     <PackageReference Include="Microsoft.AspNetcore.Mvc.Testing" Version="3.1.*" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.*" />
