--- a/tests/NRustLightning.Server.Tests/docker-compose.yml
+++ b/tests/NRustLightning.Server.Tests/docker-compose.yml
@@ -81,19 +81,23 @@ services:
           - lnd
   lightningd:
     restart: "unless-stopped"
-    image: blockstream/lightningd:prom
-    command:
-      - lightningd
-      - --bitcoin-rpcconnect=bitcoind
-      - --bitcoin-rpcuser=${BITCOIND_RPC_USER}
-      - --bitcoin-rpcpassword=${BITCOIND_RPC_PASS}
-      - --bitcoin-rpcport=${BITCOIND_RPC_PORT}
-      - --network=regtest
-      - --alias=regtest-lighningd1
-      - --log-level=debug
-      - --lightning-dir=/root/.lightning
+    stop_signal: SIGKILL
+    image: btcpayserver/lightning:v0.8.2-dev
     environment:
       EXPOSE_TCP: "true"
+      LIGHTNINGD_NETWORK: regtest
+      LIGHTNINGD_CHAIN: btc
+      LIGHTNINGD_OPT: |
+        bitcoin-datadir=/etc/bitcoin
+        bitcoin-rpcconnect=bitcoind
+        bitcoin-rpcuser=${BITCOIND_RPC_USER}
+        bitcoin-rpcpassword=${BITCOIND_RPC_PASS}
+        bitcoin-rpcport=${BITCOIND_RPC_PORT}
+        network=regtest
+        announce-addr=lightningd
+        log-level=debug
+        dev-fast-gossip
+        dev-bitcoind-poll=1
     expose:
       - "9735" # p2p port
       - "9835" # rpc port
@@ -109,6 +113,7 @@ services:
     # Too long and lightningd cannot bind rpc socket.
     volumes:
       - "lightningd_dir:/root/.lightning"
+      - "${DATA_PATH}/.bitcoin:/etc/bitcoin"
 
   nrustlightning:
     restart: "unless-stopped"
