--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,3 +49,7 @@ jobs:
       - name: Run test in ${{ matrix.os }}
         if: startsWith(matrix.dotnet, '3.1')
         run: dotnet test tests/NRustLightning.Tests -- RunConfiguration.TestSessionTimeout=30000
+
+      - name: Run integration tests ${{ matrix.os }}
+        if: startsWith(matrix.dotnet, '3.1') && startsWith(matrix.os, 'ubuntu') # docker-compose is installed only in ubuntu
+        run: dotnet test tests/NRustLightning.Server.Tests
