--- a/docker-compose.regtest.yml
+++ b/docker-compose.regtest.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: ./Dockerfiles
       dockerfile: bitcoin
-    image: joemphilips/bitcoind
+    image: joemphilips/bitcoind:0.19.1
     environment:
       BITCOIN_NETWORK: regtest
     user: root:root
@@ -38,10 +38,12 @@ services:
       - "./data/.bitcoin:/data"
   lnd:
     restart: unless-stopped
-    image: joemphilips/lnd
+    image: joemphilips/lnd:v0.9.0-beta
     build:
       context: ./Dockerfiles
       dockerfile: lnd
+      args:
+        LND_VERSION: v0.9.0-beta
     entrypoint: ["./start-lnd.sh"]
     environment:
       NETWORK: regtest
@@ -150,6 +152,7 @@ services:
       - "${HOME}/.aspnet/:/root/.aspnet/"
       - "${HOME}/.microsoft/usersecrets/:/root/.microsoft/usersecrets"
       - "./data/nrustlightning/:/root/.nrustlightning"
+      - ~/.vsdbg:/remote_debugger:rw
     networks:
       main:
         aliases:
