--- a/src/NRustLightning.CLI/NRustLightning.CLI.csproj
+++ b/src/NRustLightning.CLI/NRustLightning.CLI.csproj
@@ -5,4 +5,8 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\NRustLightning.Client\NRustLightning.Client.csproj" />
+    </ItemGroup>
+
 </Project>
