--- a/src/NRustLightning.Server/NRustLightning.Server.csproj
+++ b/src/NRustLightning.Server/NRustLightning.Server.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IO.REcyclableMemoryStream" Version="1.3.3" />
     <PackageReference Include="NBitcoin.Altcoins" Version="2.0.8" />
     <PackageReference Include="NBXplorer.Client" Version="3.0.9" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20214.1" />
