add endpoint for making new invoice

--- a/tests/NRustLightning.Server.Tests/NRustLightning.Server.Tests.csproj
+++ b/tests/NRustLightning.Server.Tests/NRustLightning.Server.Tests.csproj
@@ -21,4 +21,6 @@
     <ProjectReference Include="..\DockerComposeFixture\DockerComposeFixture\DockerComposeFixture.csproj" />
   </ItemGroup>
 
+  <Import Project="../../src/LDK.targets" />
+
 </Project>
