Add LSAT Authentication middleware

--- a/src/NRustLightning.Server/NRustLightning.Server.csproj
+++ b/src/NRustLightning.Server/NRustLightning.Server.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NRustLightning\NRustLightning.csproj" />
+    <ProjectReference Include="..\Macaroons\Macaroons.csproj" />
   </ItemGroup>
 
   <ItemGroup>
