--- a/src/NRustLightning.Server/NRustLightning.Server.csproj
+++ b/src/NRustLightning.Server/NRustLightning.Server.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\NRustLightning\NRustLightning.csproj" />
     <ProjectReference Include="..\Macaroons\Macaroons.csproj" />
+    <ProjectReference Include="..\FSharp.SystemTextJson\FSharp.SystemTextJson.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
