--- a/src/NRustLightning.Server/NRustLightning.Server.csproj
+++ b/src/NRustLightning.Server/NRustLightning.Server.csproj
@@ -7,6 +7,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="LSATAuthenticationHandler" Version="1.0.0-date20200609-1247.git-f3bb08f-" />
     <PackageReference Include="Microsoft.IO.REcyclableMemoryStream" Version="1.3.3" />
     <PackageReference Include="NBXplorer.Client" Version="2.0.0.26" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20214.1" />
