--- a/tests/NRustLightning.Server.Tests/NRustLightning.Server.Tests.csproj
+++ b/tests/NRustLightning.Server.Tests/NRustLightning.Server.Tests.csproj
@@ -20,6 +20,10 @@
     <ProjectReference Include="..\DockerComposeFixture\DockerComposeFixture\DockerComposeFixture.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="appsettings.test.json" CopyToOutputDirectory="Always" />
+  </ItemGroup>
+
   <Import Project="../../src/LDK.targets" />
 
 </Project>
