Get balance when a user has queried wallet info
* Fix bug in "--regtest", "--testnet" command line options.
  before this commit it wasn't specifying the type signature for
  `Option` so it ended up in empty value.
* Read NBX options when loading configuration.
* Move GetWalletInfo endpoint from InfoController to WalletController.
  Since it makes more sense.
* Add Try-catch block when getting feerate from nbxplorer.
  querying to nbxplorer is not always safe, I have added a cache
  for the feerate and fallback to using the cache if the request fails.
* It is not fully finished, we must bump nbx version for `GetBalance`
  operation. But before that, we must bump NBitcoin version.

--- a/tests/NRustLightning.Server.Tests/docker-compose.yml
+++ b/tests/NRustLightning.Server.Tests/docker-compose.yml
@@ -57,6 +57,8 @@ services:
       main:
         aliases:
           - nbxplorer
+    volumes:
+      - "${DATA_PATH}/.nbxplorer:/datadir"
 
   lnd:
     restart: unless-stopped
@@ -148,9 +150,11 @@ services:
       - dotnet
       - NRustLightning.Server.dll
       - --nohttps
+      - --regtest
       - --debug.http=true
       - --httpport=80
       - --externalip="nrustlightning:9735"
+      - --nbx.rpcurl="http://nbxplorer:${NBXPLORER_PORT}"
     ports:
       - "9735:9735"
       - "${HTTP_PORT:?no_http_port_set}:80"
