--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "tests/DockerComposeFixture"]
 	path = tests/DockerComposeFixture
 	url = https://github.com/joemphilips/DockerComposeFixture
+[submodule "src/LiteDB"]
+	path = src/LiteDB
+	url = https://github.com/joemphilips/LiteDB
