Confirm channel opens in regtest.
* By dirty hack for waiting channel opens.
* Make sure we use right port for lnd in docker-compose

--- a/tests/NRustLightning.Server.Tests/docker-compose.yml
+++ b/tests/NRustLightning.Server.Tests/docker-compose.yml
@@ -71,6 +71,7 @@ services:
       - --restlisten=0.0.0.0:${LND_REST_PORT:?no_lnd_rest_port}
       # for debugging with cli.
       - --rpclisten=0.0.0.0:32777
+      - --listen=0.0.0.0:9888
       - --bitcoin.regtest
       - --bitcoin.node=bitcoind
       - --bitcoind.rpchost=bitcoind:${BITCOIND_RPC_PORT}
