--- a/tests/NRustLightning.Server.Tests/docker-compose.yml
+++ b/tests/NRustLightning.Server.Tests/docker-compose.yml
@@ -106,23 +106,28 @@ services:
           - lnd
   lightningd:
     restart: "unless-stopped"
-    stop_signal: SIGKILL
-    image: btcpayserver/lightning:v0.8.2-dev
+    # stop_signal: SIGKILL
+    image: joemphilips/lightningd:v0.8.2.1-dev
+    build:
+      context: ../../Dockerfiles
+      dockerfile: lightningd
+      args:
+        DEVELOPER: 1
     environment:
       EXPOSE_TCP: "true"
       LIGHTNINGD_NETWORK: regtest
-      LIGHTNINGD_CHAIN: btc
-      LIGHTNINGD_OPT: |
-        bitcoin-datadir=/etc/bitcoin
-        bitcoin-rpcconnect=bitcoind
-        bitcoin-rpcuser=${BITCOIND_RPC_USER}
-        bitcoin-rpcpassword=${BITCOIND_RPC_PASS}
-        bitcoin-rpcport=${BITCOIND_RPC_PORT}
-        network=regtest
-        announce-addr=lightningd
-        log-level=debug
-        dev-fast-gossip
-        dev-bitcoind-poll=1
+    command:
+      - --network=regtest
+      - --addr=lightningd:9735
+      - --bitcoin-datadir=/etc/bitcoin
+      - --bitcoin-rpcconnect=bitcoind
+      - --bitcoin-rpcuser=${BITCOIND_RPC_USER}
+      - --bitcoin-rpcpassword=${BITCOIND_RPC_PASS}
+      - --bitcoin-rpcport=${BITCOIND_RPC_PORT}
+      - --announce-addr=lightningd
+      - --log-level=debug
+      - --dev-fast-gossip
+      - --dev-bitcoind-poll=1
     expose:
       - "9735" # p2p port
       - "9835" # rpc port
@@ -134,10 +139,7 @@ services:
       main:
         aliases:
           - lightningd
-    # We wanted to use bind mount here, but sometimes socket name becomes
-    # Too long and lightningd cannot bind rpc socket.
     volumes:
-      - "lightningd_dir:/root/.lightning"
       - "${DATA_PATH}/.bitcoin:/etc/bitcoin"
 
   nrustlightning:
@@ -175,8 +177,5 @@ services:
       main:
         aliases:
           - nrustlightning
-volumes:
-  lightningd_dir:
-
 networks:
   main:
