--- a/tests/NRustLightning.Server.Tests/docker-compose.yml
+++ b/tests/NRustLightning.Server.Tests/docker-compose.yml
@@ -116,7 +116,7 @@ services:
     environment:
       EXPOSE_TCP: "true"
       LIGHTNINGD_NETWORK: regtest
-      LIGHTNINGD_VERSION: master
+      LIGHTNINGD_VERSION: master-dev
     command:
       - --network=regtest
       - --addr=lightningd:9735
