externalize KeysInterface to C# side.
Before this commit, ChannelManager and PeerManager was using
different `node_secret` , which was ending up using different
node_id for transport layer and routing message. Which is clear
violation of the spec (mostly 07: routing)

--- a/src/NRustLightning.RustLightningTypes/NRustLightning.RustLightningTypes.fsproj
+++ b/src/NRustLightning.RustLightningTypes/NRustLightning.RustLightningTypes.fsproj
@@ -10,6 +10,7 @@
         <Compile Include="StreamExtensions.fs" />
         <Compile Include="Event.fs" />
         <Compile Include="ChannelDetails.fs" />
+        <Compile Include="ChannelKeys.fs" />
     </ItemGroup>
 
     <ItemGroup>
