--- a/tests/NRustLightning.Server.Tests/docker-compose.yml
+++ b/tests/NRustLightning.Server.Tests/docker-compose.yml
@@ -161,6 +161,7 @@ services:
       - --externalip="nrustlightning:9735"
       - --nbx.rpcurl="http://nbxplorer:${NBXPLORER_PORT}"
       - --ln.channel_options.announced_channel=true
+      - --seed=ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff 
     ports:
       - "${HTTP_PORT:?no_http_port_set}:8080"
     expose:
