externalize lightningd's data_dir

--- a/tests/NRustLightning.Server.Tests/docker-compose.yml
+++ b/tests/NRustLightning.Server.Tests/docker-compose.yml
@@ -141,6 +141,7 @@ services:
         aliases:
           - lightningd
     volumes:
+      - "${DATA_PATH}/.lightning:/root/.lightning"
       - "${DATA_PATH}/.bitcoin:/etc/bitcoin"
 
   nrustlightning:
