--- a/src/NRustLightning.Server/NRustLightning.Server.csproj
+++ b/src/NRustLightning.Server/NRustLightning.Server.csproj
@@ -6,6 +6,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DBTrie" Version="1.0.31" />
     <PackageReference Include="LSATAuthenticationHandler" Version="1.0.0-date20200609-1247.git-f3bb08f-" />
     <PackageReference Include="Microsoft.IO.REcyclableMemoryStream" Version="1.3.3" />
     <PackageReference Include="NBXplorer.Client" Version="3.0.*" />
