--- a/src/NRustLightning.Server/NRustLightning.Server.csproj
+++ b/src/NRustLightning.Server/NRustLightning.Server.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="LSATAuthenticationHandler" Version="1.0.0-date20200609-1247.git-f3bb08f-" />
     <PackageReference Include="Microsoft.IO.REcyclableMemoryStream" Version="1.3.3" />
     <PackageReference Include="NBXplorer.Client" Version="3.0.*" />
-    <PackageReference Condition=" '$(Configuration)' == 'Debug' " Include="NSwag.AspNetCore" Version="13.6.2" />
+    <PackageReference Condition=" '$(Configuration)' == 'Debug' " Include="Swashbuckle.AspNetCore" Version="5.5.1" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20214.1" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.112.1" />
     <PackageReference Include="System.IO.Pipelines" Version="4.7.2" />
