--- a/src/NRustLightning.CLI/NRustLightning.CLI.csproj
+++ b/src/NRustLightning.CLI/NRustLightning.CLI.csproj
@@ -4,6 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <PublishSingleFile>true</PublishSingleFile>
+        <RuntimeIdentifier>osx-x64</RuntimeIdentifier>
     </PropertyGroup>
 
     <ItemGroup>
