--- a/tests/NRustLightning.Tests/NRustLightning.Tests.csproj
+++ b/tests/NRustLightning.Tests/NRustLightning.Tests.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\NRustLightning\NRustLightning.csproj" />
+      <ProjectReference Include="..\NRustLightning.Tests.Common\NRustLightning.Tests.Common.csproj" />
     </ItemGroup>
 
     <ItemGroup>
