Add new entrypoint to ChannelManager
`BroadcastNodeAnnouncement` which is necessary for telling
that the global ip has changed to the network.

--- a/src/NRustLightning.RustLightningTypes/NRustLightning.RustLightningTypes.fsproj
+++ b/src/NRustLightning.RustLightningTypes/NRustLightning.RustLightningTypes.fsproj
@@ -13,6 +13,7 @@
         <Compile Include="RouteHint.fs" />
         <Compile Include="NetworkGraph.fs" />
         <Compile Include="ChannelKeys.fs" />
+        <Compile Include="NetAddresses.fs" />
     </ItemGroup>
 
     <ItemGroup>
