--- a/tests/NRustLightning.Net.Tests/NRustLightning.Net.Tests.csproj
+++ b/tests/NRustLightning.Net.Tests/NRustLightning.Net.Tests.csproj
@@ -6,6 +6,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+ <Import Project="../../src/LDK.targets" />
+
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
