--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,10 @@ jobs:
         run: |
           dotnet build --configuration Debug src/NRustLightning
 
+      - name: Run tests for RL-interop in ${{ matrix.os }}
+        if: startsWith(matrix.dotnet, '3.1')
+        run: dotnet test tests/NRustLightning.RustLightningType.Tests -- RunConfiguration.TestSessionTimeout=30000
+
       - name: Run unit test in ${{ matrix.os }}
         if: startsWith(matrix.dotnet, '3.1')
         run: dotnet test tests/NRustLightning.Tests -- RunConfiguration.TestSessionTimeout=30000
