--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "tests/DockerComposeFixture"]
 	path = tests/DockerComposeFixture
 	url = https://github.com/joemphilips/DockerComposeFixture
+[submodule "src/ClangSharp"]
+	path = src/ClangSharp
+	url = https://github.com/microsoft/ClangSharp
