Confirm MatBlazor is working

--- a/src/NRustLightning.GUI/src/NRustLightning.GUI.Client/NRustLightning.GUI.Client.fsproj
+++ b/src/NRustLightning.GUI/src/NRustLightning.GUI.Client/NRustLightning.GUI.Client.fsproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Bolero" Version="0.*" />
     <PackageReference Include="Bolero.Build" Version="0.*" />
     <PackageReference Include="Bolero.HotReload" Version="0.*" />
+    <PackageReference Include="MatBlazor" Version="2.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="0.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.*" />
