--- a/src/NRustLightning.GUI/src/NRustLightning.GUI.Client/NRustLightning.GUI.Client.fsproj
+++ b/src/NRustLightning.GUI/src/NRustLightning.GUI.Client/NRustLightning.GUI.Client.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="Components.fs" />
     <Compile Include="ConfigurationModule\WalletBiwaConfiguration.fs" />
     <Compile Include="ConfigurationModule\Configuration.fs" />
+    <Compile Include="CoinView.fs" />
     <Compile Include="Wallet.fs" />
     <Compile Include="Main.fs" />
     <Compile Include="Startup.fs" />
