--- a/src/NRustLightning.GUI/src/NRustLightning.GUI.Client/NRustLightning.GUI.Client.fsproj
+++ b/src/NRustLightning.GUI/src/NRustLightning.GUI.Client/NRustLightning.GUI.Client.fsproj
@@ -7,18 +7,24 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Utils.fs" />
+    <Compile Include="Localization.fs" />
+    <Compile Include="AppState.fs" />
     <Compile Include="Components.fs" />
     <Compile Include="ConfigurationModule\WalletBiwaConfiguration.fs" />
     <Compile Include="ConfigurationModule\Configuration.fs" />
     <Compile Include="CoinView.fs" />
     <Compile Include="Wallet.fs" />
     <Compile Include="Main.fs" />
+    <Compile Include="Breadcrumbs.fs" />
+    <Compile Include="NavMenu.fs" />
+    <Compile Include="Main2.fs" />
     <Compile Include="Startup.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Bolero" Version="0.*" />
     <PackageReference Include="Bolero.Build" Version="0.*" />
     <PackageReference Include="Bolero.HotReload" Version="0.*" />
+    <PackageReference Include="Humanizer" Version="2.8.26" />
     <PackageReference Include="MatBlazor" Version="2.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="0.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0" />
@@ -27,5 +33,9 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\NRustLightning.Infrastructure\NRustLightning.Infrastructure.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="UIResources.properties" />
+    <Folder Include="Resources" />
   </ItemGroup>
 </Project>
